--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,11 +2,12 @@ body {
   width: 100vw;
   height: 100vh;
   font-size: 32px;
+  margin: 0;
 }
 
 .title-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   background-color: lightpink;
 }
 
